# Nmap Changelog ($Id$); -*-text-*-

o Made the various Makefiles' treatment of makefile.dep uniform:
  "make clean" keeps the file and "make distclean" deletes it.
  [Michael McTernan]

o [Ncat] --output logging now works in UDP mode. Thanks to Michal
  Hlavinka for reporting the bug. [David Fifield]

o [NSE] Added pcanywhere-brute script which bruteforces pcAnywhere server
  for valid logins. [Aleksandar Nikolic]

o [NSE] Added http-rfi-spider script that spiders webservers in search of
  remote file inclusion vulnerabilities. [Piotr Olma]

o [NSE] Added mysql-vuln-cve2012-2122 script which exploits an authentication 
  bypass vulnerability in MySQL/MariaDB to dump usernames and password hashes. 
  (CVE2012-2122) [Paulino Calderon]

o [NSE] Added http-frontpage-login script which tries to detect anonymous
  login vulnerability in Frontpage Extensions. [Aleksandar Nikolic]

o [NSE] Added dns-nsec3-enum script which which abuses NSEC3 to enumerate
  all domains on a DNS server. [Aleksandar Nikolic]
  
o [NSE] Added the script http-waf-fingerprint which tries to detect the presence of
  a web application firewall and its type and version. [Hani Benhabiles]

o [NSE] More Windows 7 and Windows 2008 fixes for the smb library and smb-ls
  scripts. [Patrik Karlsson]

o [NSE] Added SPNEGO authentication supporting Windows 7 and Windows 2008 to
  the smb library. [Patrik Karlsson]

o [NSE] Changed http-brute so that it works against the root path
  ("/") by default rather than always requiring the http-brute.path
  script argument. [Fyodor]

o [NSE] Applied patch from Daniel Miller that fixes bug in several scripts and
  libraries http://seclists.org/nmap-dev/2012/q2/593 [Daniel Miller]

o [NSE] Added the script smb-ls that lists files on SMB shares and produces
  output similar to the dir command on Windows. [Patrik Karlsson]

o [Zenmap] Added Italian translation by Francesco Tombolini.

o [NSE] Added the script eppc-enum-processes that enumerates active